--- a/BlazorTool.Client/wwwroot/appsettings.json
+++ b/BlazorTool.Client/wwwroot/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AuthToken": "ВАШ_СТАТИЧЕСКИЙ_TOKEN_Пока"
 }
