--- a/BlazorTool/BlazorTool.csproj
+++ b/BlazorTool/BlazorTool.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -10,6 +10,10 @@
         <ProjectReference Include="..\BlazorTool.Client\BlazorTool.Client.csproj" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
         <PackageReference Include="Telerik.UI.for.Blazor" Version="6.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
