--- a/BlazorTool/appsettings.json
+++ b/BlazorTool/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "API": "http://10.1.41.22:1133/api/v1"
 }
