--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 /BlazorTool/appsettings.json
 /BlazorTool.Client/wwwroot/appsettings.json
+BlazorTool_project_documentation.md
+ProjectToMdBuilder .lnk
