--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /BlazorTool.Client/wwwroot/appsettings.json
 BlazorTool_project_documentation.md
 ProjectToMdBuilder .lnk
+/BlazorTool_project_documentation.md
