--- a/BlazorTool/appsettings.Development.json
+++ b/BlazorTool/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "HostAddress": "dev-yury.dtech.local:80"
 }
