feat: Add Changelog page and update logging
- Introduce `ChangelogPage.razor` and `CHANGELOG.md` for release notes.
- Replace `Debug.Print` with `Console.WriteLine` for consistent logging across client and server.
- Minor UI adjustments in `MainLayout.razor`, `OrdersPage.razor`, and `SchedulerPage.razor`.

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ BlazorTool_project_documentation.md
 ProjectToMdBuilder .lnk
 /BlazorTool_project_documentation.md
 /.gemini
+/commit_message.txt
+/gemini.md
