feat: Implement Changelog page and fix static file serving     - Configure `CHANGELOG.md` to be copied to `wwwroot` for client-side access.     - Implement display of `CHANGELOG.md` content on `ChangelogPage.razor`.     - Configure default `HttpClient` in `BlazorTool.Client/Program.cs` with `BaseAddress` for static  file access.     - Correct `Link` attribute in `BlazorTool.Client.csproj` for `CHANGELOG.md` to ensure correct   placement in `wwwroot`.     - Revert `app.UseBlazorFrameworkFiles()` in `BlazorTool/Program.cs` as it caused application   loading issues.     - Re-add `HttpClient` registration with `BaseAddress` and `serverBaseUrl` check in   `BlazorTool.Client/Program.cs`.

--- a/BlazorTool/BlazorTool.csproj
+++ b/BlazorTool/BlazorTool.csproj
@@ -19,5 +19,16 @@
   <ItemGroup>
     <Folder Include="Models\" />
   </ItemGroup>
-
+  <Target Name="CopyChangelogToWwwRoot" BeforeTargets="Build">
+    <ItemGroup>
+      <!-- Указываем исходный файл. Путь относительный к файлу .csproj -->
+      <ChangelogFile Include="..\CHANGELOG.md" />
+    </ItemGroup>
+    <Copy
+      SourceFiles="@(ChangelogFile)"
+      DestinationFolder="$(MSBuildProjectDirectory)\wwwroot"
+      SkipUnchangedFiles="true" 
+      />
+    <Message Text="CHANGELOG.md скопирован в wwwroot." Importance="high" />
+  </Target>
 </Project>
