add Polish changelog make multi page for Changelog Page

--- a/BlazorTool/BlazorTool.csproj
+++ b/BlazorTool/BlazorTool.csproj
@@ -22,13 +22,20 @@
   <Target Name="CopyChangelogToWwwRoot" BeforeTargets="Build">
     <ItemGroup>
       <!-- Указываем исходный файл. Путь относительный к файлу .csproj -->
-      <ChangelogFile Include="..\CHANGELOG.md" />
+      <ChangelogFile1 Include="..\CHANGELOG.md" />
+      <ChangelogFile2 Include="..\CHANGELOG_PL.md" />
     </ItemGroup>
     <Copy
-      SourceFiles="@(ChangelogFile)"
+      SourceFiles="@(ChangelogFile1)"
       DestinationFolder="$(MSBuildProjectDirectory)\wwwroot"
       SkipUnchangedFiles="true" 
       />
     <Message Text="CHANGELOG.md скопирован в wwwroot." Importance="high" />
+	<Copy
+      SourceFiles="@(ChangelogFile2)"
+      DestinationFolder="$(MSBuildProjectDirectory)\wwwroot"
+      SkipUnchangedFiles="true" 
+      />
+    <Message Text="CHANGELOG_PL.md скопирован в wwwroot." Importance="high" />
   </Target>
 </Project>
