--- a/BlazorTool.Client/BlazorTool.Client.csproj
+++ b/BlazorTool.Client/BlazorTool.Client.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
         <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+        <PackageReference Include="Markdig" Version="0.41.3" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.6" />
         <PackageReference Include="Nerdbank.GitVersioning" Version="3.7.115">
