--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ nunit-*.xml
 # Build Results of an ATL Project
 [Dd]ebugPS/
 [Rr]eleasePS/
-dlldata.c
+lldata.c
 
 # Benchmark Results
 BenchmarkDotNet.Artifacts/
@@ -371,3 +371,4 @@ ProjectToMdBuilder .lnk
 /gemini.md
 /BlazorTool/wwwroot/CHANGELOG.md
 /BlazorTool/wwwroot/CHANGELOG_PL.md
+.mcp.json
