docs: Update changelogs and gitignore
Updated CHANGELOG.md and CHANGELOG_PL.md with the latest feature details.
Also updated .gitignore to include the temporary commit message file.

--- a/.gitignore
+++ b/.gitignore
@@ -368,6 +368,7 @@ ProjectToMdBuilder .lnk
 /BlazorTool_project_documentation.md
 /.gemini
 /commit_message.txt
+commit_message.txt
 /gemini.md
 /BlazorTool/wwwroot/CHANGELOG.md
 /BlazorTool/wwwroot/CHANGELOG_PL.md
