Enhance activity display and user interface features
Updated `ActivityDisplay.razor` to convert activity descriptions to HTML and added `isExternalWindow` parameter for styling. Modified CSS for better overflow management.

Refactored `ActivityList.razor` to conditionally render the activity list header and introduced a new window for displaying activities based on the `isExternalWindow` parameter.

Added a new context menu item in `Home.razor` for opening orders, improving user options based on permissions.

Updated localization files to include translations for the new "Show activities in window" feature.

--- a/BlazorTool/BlazorTool.csproj
+++ b/BlazorTool/BlazorTool.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
         <ProjectReference Include="..\BlazorTool.Client\BlazorTool.Client.csproj" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
         <PackageReference Include="Nerdbank.GitVersioning" Version="3.7.115">
@@ -21,9 +25,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="appsettings.json">
+    <None Include="appsettings.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Content>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="wwwroot\app.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
